--- a/versions/3.0.6-k8s/Dockerfile
+++ b/versions/3.0.6-k8s/Dockerfile
@@ -3,20 +3,18 @@ MAINTAINER Adrian B. Danieli "https://github.com/sickp"
 
 ENV \
   REDIS_VERSION=3.0.6 \
-  GOSU_VERSION=1.7 \
   BUILD_PACKAGES="build-base linux-headers openssl" \
   RUNTIME_PACKAGES=""
 
 RUN \
   apk --update add ${BUILD_PACKAGES} ${RUNTIME_PACKAGES} && \
-  wget -O /usr/local/bin/gosu https://github.com/tianon/gosu/releases/download/${GOSU_VERSION}/gosu-amd64 && \
-  chmod +x /usr/local/bin/gosu && \
   cd /tmp && \
   wget http://download.redis.io/releases/redis-${REDIS_VERSION}.tar.gz && \
   tar xzf redis-${REDIS_VERSION}.tar.gz && \
   cd /tmp/redis-${REDIS_VERSION} && \
   make && \
   make install && \
+  mv /usr/local/bin/redis-server /usr/local/bin/redis-server-wrapped && \
   cp redis.conf /etc/redis.conf && \
   adduser -D redis && \
   mkdir /data && \
@@ -32,4 +30,5 @@ EXPOSE 6379
 
 COPY rootfs /
 
+# DO NOT OVERRIDE: ENTRYPOINT ["/init"]
 CMD ["redis-server", "/etc/redis.conf"]
